Some style improvements; combined the panel-title and panel-menu into one panel-header. Fixed some overflow display issues in IE7.
git-svn-id: svn+ssh://cvs1/svn/listen/trunk@347 4692729f-32a0-46b7-9832-1bf53c4881b5

--- a/controller/src/main/webapp-gui/resources/app/index.css
+++ b/controller/src/main/webapp-gui/resources/app/index.css
@@ -66,15 +66,15 @@
     border-width: 0;
     color: inherit;
     cursor: pointer;
-    height: 20px;
+    height: 18px;
     font-family: "Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
     font-size: 13px;
     font-weight: bold;
-    padding-left: 20px;
+    padding-left: 18px;
 }
 
 .add-button:hover, .delete-button:hover, .mute-button:hover, .schedule-button:hover, .unmute-button:hover {
-    color: #666666;
+    color: #888888;
 }
 
 .add-button {
@@ -141,7 +141,7 @@
     height: 100%;
     margin: 10px;
     -moz-border-radius: 8px;
-    overflow: auto;
+    overflow: hide;
     padding: 3px;
 }
 
@@ -155,9 +155,6 @@
     border: 2px solid #1162AE;
     border-radius: 8px;
     color: #1162AE;
-    font-size: 125%;
-    font-variant: small-caps;
-    font-weight: bold;
     margin-bottom: 4px;
     -moz-border-radius: 8px;
     overflow: auto;
@@ -165,10 +162,14 @@
 
 .conference-title {
     clear: right;
+    font-size: 125%;
+    font-variant: small-caps;
+    font-weight: bold;
+    padding-left: 6px;
 }
 
-.conference-title, .panel-content, .panel-title, .panel-menu {
-    padding: 3px;
+.panel-content, .panel-title, .panel-menu {
+    padding: 6px;
 }
 
 .conference-menu {
@@ -180,19 +181,18 @@
 
 .conference-menu div {
     float: left;
-    margin: 3px 0 0 3px;
+    margin: 3px 0 0 6px;
 }
 
 .conference-menu div.buttons {
     float: right;
+    padding-right: 6px;
 }
 
 #conference-status-message {
     color: #666666;
-    font-size: 60%;
+    font-size: 75%;
     font-style: italic;
-    font-variant: normal;
-    font-weight: normal;
     margin-top: 5px;
 }
 
@@ -204,7 +204,7 @@
     width: 16px;
 }
 
-li.even {
+li.odd {
     background-color: #EEEEEE;
 }
 
@@ -225,30 +225,31 @@ li.even {
     -moz-border-radius: 8px;
 }
 
-.panel-menu {
-    margin-bottom: 2px;
-}
-
-.panel-title {
+.panel-header {
     background-color: #DAE4EE;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     color: #1162AE;
     font-weight: bold;
+    margin-bottom: 2px;
     -moz-border-radius-topleft: 8px;
     -moz-border-radius-topright: 8px;
+    overflow: auto;
     -webkit-border-top-left-radius: 8px;
     -webkit-border-top-right-radius: 8px;
 }
 
+.panel-title {
+    float: left;
+}
+
 .panel-menu {
-    background-color: #EEEEEE;
+    float: right;
     font-size: 75%;
     text-align: right;
 }
 
 .panel-content {
-    /*background-color: #EEEEEE;*/
     overflow: auto;
 }
 
